[package]
edition = "2021"
name = "jwt-jsonrpsee"
version = "0.1.1"

[dependencies]
futures = "0.3"
headers = "0.4.0"
hex = "0.4"
http = "0.2"
jsonwebtoken = "9.3"
rand = "0.8"
serde = "1"
thiserror = "1"
tower = "0.4"

[dev-dependencies]
hyper = "0.14.29"
jsonrpsee = {version = "0.22.5", features = ["server", "http-client", "macros"]}
reqwest = "0.12.5"
tokio = {version = "1.38.0", features = ["rt", "macros"]}
tower = {version = "0.4.13", features = ["full"]}
tower-http = {version = "0.4.0", features = ["full"]}
tracing = "0.1.40"
tracing-test = "0.2.5"

[lints.rust]
unused_crate_dependencies = "warn"

[lints.clippy]
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
